testing/kc-ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/proxy-buffer-size: 128k
    nginx.ingress.kubernetes.io/ssl-passthrough: 'true'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
  name: keycloak-ingress
  namespace: keycloak
spec:
  ingressClassName: nginx
  rules:
    - host: keycloak.10-7-2-66.sslip.io
      http:
        paths:
          - backend:
              service:
                name: keycloak-http
                port:
                  number: 8443
            path: /
            pathType: Prefix
